--- a/tests/makefile
+++ b/tests/makefile
@@ -1,7 +1,13 @@
 CFLAGS= -g -Wall -Wextra -pipe -O0
-queue.out: queue.c ../src/queue.c
-	${CC} ${CFLAGS} -o ${.TARGET} ${.ALLSRC}
 
-test-queue: queue.out
-	./queue.out &&\
-	valgrind --tool=memcheck --leak-check=yes --show-reachable=yes --num-callers=20 --track-fds=yes ./queue.out
+.SUFFIXES: .out .test .c
+.PHONY: test
+.c.out:
+	${CC} ${CFLAGS} -o ${.TARGET} ${.ALLSRC}
+.out.test:
+	./${.IMPSRC} && \
+	valgrind --tool=memcheck --leak-check=yes --show-reachable=yes --num-callers=20 --track-fds=yes ./${.IMPSRC}
+
+
+test: queue.test
+queue.out: queue.c ../src/queue.c
