complete thread-safe queue & tests

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,13 +1,14 @@
 CFLAGS= -g -Wall -Wextra -pipe -O0
+LDFLAGS= -lpthread
 
 .SUFFIXES: .out .test .c
 .PHONY: test
 .c.out:
-	${CC} ${CFLAGS} -o ${.TARGET} ${.ALLSRC}
+	${CC} ${CFLAGS} -o ${.TARGET} ${.ALLSRC} ${LDFLAGS}
 .out.test:
-	./${.IMPSRC} && \
-	valgrind --tool=memcheck --leak-check=yes --show-reachable=yes --num-callers=20 --track-fds=yes ./${.IMPSRC}
+	./${.IMPSRC}
 
 
-test: queue.test
+test: queue.test thread-safe-queue.test
 queue.out: queue.c ../src/queue.c
+thread-safe-queue.out: thread-safe-queue.c ../src/thread-safe-queue.c ../src/queue.c
