compile to lib, begin comms test

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,16 +1,11 @@
 CFLAGS= -g -Wall -Wextra -pipe -O0
-LDFLAGS= -lpthread
+LDFLAGS= -lpthread ../src/liborcv.a
 
 .SUFFIXES: .out .test .c
 .PHONY: test
 .c.out:
-	${CC} ${CFLAGS} -o ${.TARGET} ${.ALLSRC} ${LDFLAGS}
+	${CC} ${CFLAGS} -o ${.TARGET} ${.IMPSRC} ${LDFLAGS}
 .out.test:
 	./${.IMPSRC}
 
-test: queue.test thread-safe-queue.test event-queue.test inputs.test
-queue.out: queue.c ../src/queue.c
-thread-safe-queue.out: thread-safe-queue.c ../src/thread-safe-queue.c ../src/queue.c
-event-queue.out: event-queue.c ../src/event-queue.c ../src/thread-safe-queue.c ../src/queue.c
-inputs.out: inputs.c ../src/inputs.c ../src/event-queue.c ../src/thread-safe-queue.c ../src/queue.c
-comms.out: comms.c ../src/comms.c ../src/inputs.c ../src/event-queue.c ../src/thread-safe-queue.c ../src/queue.c
+test: queue.test thread-safe-queue.test event-queue.test inputs.test comms.test
