--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,5 @@ useDynLib(orcv,
           C_await_response, C_close_connection)
 export(start, send, next_event,
        respond, await_response, complete_event)
+S3method(await_response, Event)
+S3method(await_response, FD)
