--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: orcv
 Type: Package
-Title: A super unique package that creates an event queue that can be responded to.
+Title: Async Communicating Event Receiver
 Version: 0.0.1
 Date: 2022-01-03
 Author: Jason Cairns
 Maintainer: <jason.cairns@auckland.ac.nz>
-Description: A super unique package that creates an event queue that can be responded to.
+Description: Self-contained package that creates an event queue which can be responded to with long-running connections.
+Suggests: parallel
 License: MIT
