add c method for FD

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,4 @@ S3method(await_response, FD)
 S3method(await_response, Event)
 S3method(event_complete, FD)
 S3method(event_complete, Event)
+S3method(c, FD)
