--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,4 @@
-useDynLib(orcv,
-          C_start, C_send, C_multiplex, C_respond,
-          C_monitor_response, C_await_response,
-          C_close_connection)
+# useDynLib(orcv, C_start, C_send, C_multiplex, C_respond, C_monitor_response, C_await_response, C_close_connection)
 export(start,
        event_push, event_pop,
        respond, monitor_response, await_response,
