create location class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,10 +32,22 @@ S3method(send, FD)
 S3method(receive, FD)
 S3method(close, FD)
 
-S3method(send, Location)
-S3method(address, Location)
-S3method(port, Location)
-
 S3method(send, character)
+S3method(location, numeric)
+S3method(location, integer)
+
 S3method(as.Location, character)
 S3method(as.Location, integer)
+S3method(as.Location, list)
+S3method(address, Location)
+S3method(port, Location)
+S3method(rep, Location)
+S3method(c, Location)
+S3method(as.data.frame, Location)
+S3method(as.list, Location)
+S3method("[", Location)
+S3method("[<-", Location)
+S3method(format, Location)
+S3method(print, Location)
+S3method(Ops, Location)
+S3method(send, Location)
