--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ S3method(as.data.frame, Location)
 S3method(as.list, Location)
 S3method("[", Location)
 S3method("[<-", Location)
+S3method("[[", Location)
+S3method("[[<-", Location)
 S3method(print, Location)
 S3method(Ops, Location)
 S3method(send, Location)
