add methods for FD

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,10 +32,15 @@ S3method(location, Message)
 S3method(payload, Message)
 S3method(send, Message)
 
+S3method("[", FD)
+S3method("[[", FD)
 S3method(c, FD)
 S3method(close, FD)
 S3method(receive, FD)
+S3method(rep, FD)
 S3method(send, FD)
+S3method(split, FD)
+S3method(unique, FD)
 
 S3method(location, integer)
 S3method(location, numeric)
