--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ S3method(send, Message)
 
 S3method("[", FD)
 S3method("[[", FD)
+S3method(as.data.frame, FD)
 S3method(c, FD)
 S3method(close, FD)
 S3method(receive, FD)
