attempt implicit integer coercion for locations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(address, Location)
 S3method(as.Location, character)
 S3method(as.Location, integer)
 S3method(as.Location, list)
+S3method(as.Location, numeric)
 S3method(as.data.frame, Location)
 S3method(as.list, Location)
 S3method(c, Location)
