allow for NULL location

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,11 +32,11 @@ S3method(location, Message)
 S3method(payload, Message)
 S3method(send, Message)
 
-S3method("[", FD)
-S3method("[[", FD)
 S3method(as.data.frame, FD)
 S3method(c, FD)
 S3method(close, FD)
+S3method("[", FD)
+S3method("[[", FD)
 S3method(receive, FD)
 S3method(rep, FD)
 S3method(send, FD)
@@ -47,19 +47,20 @@ S3method(location, integer)
 S3method(location, numeric)
 S3method(send, character)
 
+S3method(address, Location)
+S3method(as.data.frame, Location)
+S3method(as.list, Location)
+S3method(as.Location, character)
+S3method(as.Location, integer)
+S3method(as.Location, list)
+S3method(as.Location, NULL)
+S3method(as.Location, numeric)
+S3method(c, Location)
 S3method("[", Location)
 S3method("[<-", Location)
 S3method("[[", Location)
 S3method("[[<-", Location)
 S3method(Ops, Location)
-S3method(address, Location)
-S3method(as.Location, character)
-S3method(as.Location, integer)
-S3method(as.Location, list)
-S3method(as.Location, numeric)
-S3method(as.data.frame, Location)
-S3method(as.list, Location)
-S3method(c, Location)
 S3method(port, Location)
 S3method(print, Location)
 S3method(rep, Location)
