--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Download dependencies
+      run: nix develop --command echo "Dependencies downloaded"
+
     - name: Run checks
       run: |
         nix flake check -v
