--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Async Communicating Event Receiver
 Version: 1.1
 Date: 2022-10-14
 Author: Jason Cairns
-Maintainer: <jason.cairns@auckland.ac.nz>
+Maintainer: Jason Cairns <jason.cairns@auckland.ac.nz>
 Description: Self-contained package that creates an event queue which can be responded to with long-running connections.
 Suggests: parallel
 License: MIT
